# kt_wso2-php5.6

./: .gitignore  README.md
php/: Makefile  Makefile.am  config.h  config.h.in  config.status  configure  libtool
php/src/: Makefile  Makefile.objects  config.nice  config.status  configure  libtool
php/src/.libs/: wsf.soT
php/src/autom4te.cache/: output.0  requests  traces.0
php/wsf_c/: Makefile.am  config.h.in  configure
php/wsf_c/autom4te.cache/: output.0  requests  traces.0
php/wsf_c/axis2c/: config.h.in  configure
php/wsf_c/axis2c/autom4te.cache/: output.0  requests  traces.0
php/wsf_c/axis2c/axiom/: config.h.in  configure
php/wsf_c/axis2c/guththila/: config.h.in  configure
php/wsf_c/axis2c/neethi/: config.h.in  configure
php/wsf_c/axis2c/util/: config.h.in  configure
php/wsf_c/examples/flickr/: Makefile.am
php/wsf_c/rampartc/: config.h.in  configure
php/wsf_c/rampartc/autom4te.cache/: output.0  requests  traces.0
php/wsf_c/sandesha2c/: Makefile.am  config.h.in  configure
php/wsf_c/savanc/: Makefile.in  config.h.in  configure  maven.xml  project.xml
php/wsf_c/savanc/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
php/wsf_c/savanc/samples/: Makefile  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  libtool
php/wsf_c/savanc/src/subs_mgrs/registry/: Makefile.am
php/wsf_c/savanc/src/subs_mgrs/registry/test/: Makefile.am  test_registry.c
php/wsf_c/savanc/src/subs_mgrs/registry/test/ab/: savanc_result.txt  subscriber_result.txt
php/wsf_c/wsclient/: config.h.in  configure
(+253 files in other folders)
